@@ -162,6 +162,7 @@ VoiceContext = \translator {
 	\consists "Phrasing_slur_engraver"
 	\consists "Slur_engraver"
 	\consists "Tie_engraver"
+	\consists "New_tie_engraver"
 	\consists "Porrectus_engraver"
 	\consists "Tuplet_engraver"
 	\consists "A2_engraver"
