@@ -1,5 +1,12 @@
 2002-11-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
+	* lily/parser.yy (event_that_take_dir): allow postfix notation for ties.
+
+	* lily/new-tie-engraver.cc (process_acknowledged_grobs): new
+	engraver. process ties in postfix notation, i.e. c8-~ c
+
+	* lilypond-mode.el (LilyPond-command-alist): run LaTeX by default.
+
 	* input/regression/beam-postfix-notation.ly (texidoc): new file.
 
 	* lily/parser.yy (event_that_take_dir): allows c8-[ for beams.
